// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectHeaderDistrictsList /> should render correctly 1`] = `
Array [
  <div
    className="sc-bcXGCL klhoji toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cUzULY toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bcXGCL gbiIcr toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bcXGCL iAUFHT toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bcXGCL egFGdF toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bcXGCL iXsWAS toasts-container toasts-container--bottom-right"
  />,
  <li
    className="sc-bcXGCL fDSpmX ProjectHeaderDistrictsList__DistrictsButton-hErwfx dvdtee p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <svg
      className="sc-bcXGCL sc-eJDTud idvNjs dxHlFh cap-icon"
      fill="none"
      viewBox="0 0 9 12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.321 1a3.321 3.321 0 013.322 3.321c0 1.571-2.436 5.484-3.135 6.577a.22.22 0 01-.373 0C3.435 9.805 1 5.892 1 4.321A3.321 3.321 0 014.321 1v0z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
      <path
        d="M4.322 5.65a1.329 1.329 0 100-2.657 1.329 1.329 0 000 2.657z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    <p
      className="sc-bcXGCL isNeYY cap-text platform__body"
      title="zone 1 "
    >
      zone 1
       
      and-count-other-areas {"count":4}
    </p>
  </li>,
  <div
    aria-label="data_district_list"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="project-header-district-list-modal"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ProjectHeaderDistrictsList /> should render correctly when project is archived 1`] = `
Array [
  <div
    className="sc-bcXGCL klhoji toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cUzULY toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bcXGCL gbiIcr toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bcXGCL iAUFHT toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bcXGCL egFGdF toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bcXGCL iXsWAS toasts-container toasts-container--bottom-right"
  />,
  <li
    className="sc-bcXGCL fDSpmX ProjectHeaderDistrictsList__DistrictsButton-hErwfx dvdtee p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <svg
      className="sc-bcXGCL sc-eJDTud idvNjs dxHlFh cap-icon"
      fill="none"
      viewBox="0 0 9 12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.321 1a3.321 3.321 0 013.322 3.321c0 1.571-2.436 5.484-3.135 6.577a.22.22 0 01-.373 0C3.435 9.805 1 5.892 1 4.321A3.321 3.321 0 014.321 1v0z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
      <path
        d="M4.322 5.65a1.329 1.329 0 100-2.657 1.329 1.329 0 000 2.657z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    <p
      className="sc-bcXGCL isNeYY cap-text platform__body"
      title="zone 1 "
    >
      zone 1
       
      and-count-other-areas {"count":4}
    </p>
  </li>,
  <div
    aria-label="data_district_list"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="project-header-district-list-modal"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ProjectHeaderDistrictsList /> should render correctly with the display of modal 1`] = `
Array [
  <div
    className="sc-bcXGCL klhoji toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cUzULY toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bcXGCL gbiIcr toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bcXGCL iAUFHT toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bcXGCL egFGdF toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bcXGCL iXsWAS toasts-container toasts-container--bottom-right"
  />,
  <li
    className="sc-bcXGCL fDSpmX ProjectHeaderDistrictsList__DistrictsButton-hErwfx dvdtee p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <svg
      className="sc-bcXGCL sc-eJDTud idvNjs dxHlFh cap-icon"
      fill="none"
      viewBox="0 0 9 12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.321 1a3.321 3.321 0 013.322 3.321c0 1.571-2.436 5.484-3.135 6.577a.22.22 0 01-.373 0C3.435 9.805 1 5.892 1 4.321A3.321 3.321 0 014.321 1v0z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
      <path
        d="M4.322 5.65a1.329 1.329 0 100-2.657 1.329 1.329 0 000 2.657z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    <p
      className="sc-bcXGCL isNeYY cap-text platform__body"
      title="zone 1 "
    >
      zone 1
       
      and-count-other-areas {"count":4}
    </p>
  </li>,
  <div
    aria-label="data_district_list"
    aria-modal={true}
    data-dialog={true}
    hidden={false}
    id="project-header-district-list-modal"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      data-testid="AnimatePresence"
    >
      <div
        className="sc-bcXGCL kkunZo sc-gsGkXq cap-modal__overlay"
        onClick={[Function]}
      >
        <div
          className="sc-bcXGCL eSCgdK sc-bWOFNj GFNVU cap-modal"
        >
          <div
            className="ResetCss-jmWVRh exBVVd"
          >
            <header
              className="sc-bcXGCL MfvHV cap-modal__header"
            >
              <div
                className="sc-bcXGCL jGtgIo"
              >
                count-area {"count":5}
              </div>
              <button
                className="sc-bcXGCL kvTszR"
                onClick={[Function]}
                type="button"
              >
                <svg
                  className="sc-bcXGCL sc-eJDTud diAjQP iYOzKe cap-icon"
                  fill="none"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 11L11 1M1 1l10 10"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={0.8}
                  />
                </svg>
              </button>
            </header>
          </div>
          <main
            className="sc-bcXGCL eowUbB cap-modal__body"
          >
            <ul
              className="ListGroupFlush__Container-eGHZgt cEkgdF list-group-flush list-group"
              striped={false}
            >
              <li
                className="list-group-item"
              >
                zone 1
              </li>
              <li
                className="list-group-item"
              >
                zone 2
              </li>
              <li
                className="list-group-item"
              >
                zone 3
              </li>
              <li
                className="list-group-item"
              >
                zone 4
              </li>
              <li
                className="list-group-item"
              >
                zone 5
              </li>
            </ul>
          </main>
          <footer
            className="sc-bcXGCL ibPPgn cap-modal__footer"
          >
            <button
              className="sc-bcXGCL sc-laZSpB hUhKMG eMqMcb cap-button"
              onClick={[Function]}
              style={
                Object {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
              type="button"
            >
              global.close
            </button>
          </footer>
        </div>
      </div>
    </div>
  </div>,
]
`;
